add myFiles package

--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,13 @@
 *.ear
 
 */target
+*/target/
 /bin
-
-*.log.*
-*.log
-/.classpath
-/.project
-.settings/
 
 *.idea*
 *.project
 *.iml
 
 *.class
-/*/.classpath
 
-/target/
+
